--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core Django
-Django==4.0.2
+Django>=4.2
 # SQL Server backend
-django-mssql-backend==2.8.1
+mssql-django==1.6
 pyodbc==5.0.1
 
 # Environment variable support
