--- a/.github/workflows/main_cac-app.yml
+++ b/.github/workflows/main_cac-app.yml
@@ -14,6 +14,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Debug DB connection settings
+      run: |
+        echo "DB_NAME=$DB_NAME"
+        echo "DB_HOST=$DB_HOST"
+        echo "DB_USER=$DB_USER"
+      env:
+        DB_NAME: ${{ secrets.DB_NAME }}
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_USER: ${{ secrets.DB_USER }}
     - name: Checkout code
       uses: actions/checkout@v2
 
