--- a/.github/workflows/main_cac-app.yml
+++ b/.github/workflows/main_cac-app.yml
@@ -106,7 +106,7 @@ jobs:
         DB_HOST: ${{ secrets.DB_HOST }}
         DB_PORT: ${{ secrets.DB_PORT }}
       run: |
-        python manage.py collectstatic --noinput --check
+        python manage.py collectstatic --noinput
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
