--- a/.github/workflows/main_cac-app.yml
+++ b/.github/workflows/main_cac-app.yml
@@ -116,4 +116,4 @@ jobs:
 
     - name: Deploy using Azure CLI
       run: |
-        az webapp deploy --name cac-app --resource-group <RESOURCE_GROUP> --src-path .
+        az webapp deploy --name cac-app --resource-group RG_CAC --src-path .
