--- a/.github/workflows/main_cac-app.yml
+++ b/.github/workflows/main_cac-app.yml
@@ -25,6 +25,7 @@ jobs:
 
     - name: DNS Test
       run: nslookup cacsqlserver.database.windows.net
+
     - name: Debug DB connection settings
       run: |
         if [ "$DB_NAME" = "cac_db" ]; then
@@ -63,14 +64,8 @@ jobs:
         sudo apt-get install -y curl gnupg
         curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
         curl https://packages.microsoft.com/config/ubuntu/22.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
-        sudo apt-get install -y unixodbc
         sudo apt-get update
         sudo ACCEPT_EULA=Y apt-get install -y msodbcsql18 unixodbc-dev
-
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install --no-cache-dir -r requirements.txt
 
     - name: Test Database Connection
       run: python azure_iaac/test_db_connection.py
@@ -80,25 +75,23 @@ jobs:
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         DB_HOST: ${{ secrets.DB_HOST }}
 
-    - name: Test Database Connection
+    - name: Test pyODBC driver
       run: |
         python -c "import pyodbc; print(pyodbc.drivers())"
       env:
         DB_HOST: ${{ secrets.DB_HOST }}
-        
+
     - name: Run Django migrations
-      timeout-minutes: 5
+      run: python manage.py migrate
       env:
         DB_NAME: ${{ secrets.DB_NAME }}
         DB_USER: ${{ secrets.DB_USER }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         DB_HOST: ${{ secrets.DB_HOST }}
         DJANGO_ENV: production
-        
-      run: |
-        python manage.py migrate
 
     - name: Collect static files
+      run: python manage.py collectstatic --noinput
       env:
         DB_NAME: ${{ secrets.DB_NAME }}
         DB_USER: ${{ secrets.DB_USER }}
@@ -106,8 +99,6 @@ jobs:
         DB_HOST: ${{ secrets.DB_HOST }}
         DB_PORT: ${{ secrets.DB_PORT }}
         DJANGO_ENV: production
-      run: |
-        python manage.py collectstatic --noinput
 
     - name: Login to Azure
       uses: azure/login@v1
@@ -115,7 +106,7 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Zip application
-      run: zip -r app.zip .
-      
-    - name: Deploy to Azure
+      run: zip -r app.zip . -x "*.git*" "tests/*" "__pycache__/*"
+
+    - name: Deploy to Azure Web App
       run: az webapp deploy --name cac-app --resource-group RG_CAC --src-path app.zip --type zip
