--- a/.github/workflows/main_lc-app.yml
+++ b/.github/workflows/main_lc-app.yml
@@ -66,7 +66,10 @@ jobs:
       run: python manage.py migrate
 
     - name: Collect static files
-      run: python manage.py collectstatic --noinput
+      run: |
+        echo "CURRENT DIR:"
+        pwd
+        python manage.py collectstatic --noinput
 
     - name: Login to Azure
       uses: azure/login@v1
@@ -74,7 +77,13 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Zip application
-      run: zip -r app.zip . -x "*.git*" "tests/*" "__pycache__/*"
+      run: |
+        echo "CURRENT DIR:"
+        pwd
+        zip -r app.zip . -x "*.git*" "tests/*" "__pycache__/*"
 
     - name: Deploy to Azure Web App
-      run: az webapp deploy --name ${{ env.APP_NAME }} --resource-group ${{ env.RESOURCE_GROUP }} --src-path app.zip --type zip
+      run: |
+        echo "CURRENT DIR:"
+        pwd
+        az webapp deploy --name ${{ env.APP_NAME }} --resource-group ${{ env.RESOURCE_GROUP }} --src-path app.zip --type zip
