Logging in startup.sh included

--- a/.github/workflows/main_lc-app.yml
+++ b/.github/workflows/main_lc-app.yml
@@ -63,7 +63,10 @@ jobs:
         python -c "import pyodbc; print(pyodbc.drivers())"
         
     - name: Run Django migrations
-      run: python manage.py migrate
+      run: |
+        echo "CURRENT DIR:"
+        pwd
+        python manage.py migrate
 
     - name: Collect static files
       run: |
