--- a/.github/workflows/main_lc-app.yml
+++ b/.github/workflows/main_lc-app.yml
@@ -1,4 +1,4 @@
-name: 'Build and deploy Python app to Azure Web App: lc-app'
+name: 'Build and deploy Python app to Azure Web App: lc-app-live'
 
 on:
   push:
@@ -22,27 +22,24 @@ jobs:
       DJANGO_SETTINGS_MODULE: azureproject.production
 
     steps:
-    - name: Print simple Python message
-      run: |
-        python -c "print('Hallo Roger 👋')"
-        python -c "import os; print(os.environ.get('DB_NAME')=='lc_db')"
-        python -c "import os; print(os.environ.get('DB_USER')=='lc_db_admin@lcsqlserver')"
-        python -c "import os; print(os.environ.get('DB_HOST')=='lcsqlserver.database.windows.net')"
-        python -c "import os; print(os.environ.get('DB_PORT')=='1433')"
-        python -c "import os; print(os.environ.get('RESOURCE_GROUP')=='RG_LC')"
-        python -c "import os; print(os.environ.get('APP_NAME')=='lc-app')"
-        python -c "import os; print(os.environ.get('DJANGO_ENV')=='production')"
-
-    - name: DNS Test
-      run: nslookup lcsqlserver.database.windows.net
-
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4  # v3 -> v4 (neuere Version)
 
     - name: Set up Python version
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5  # v4 -> v5 (neuere Version)
       with:
-        python-version: '3.11.14'
+        python-version: '3.11'  # Nicht '3.11.14' - Azure nutzt intern 3.11.x
+
+    - name: Print debug information
+      run: |
+        python -c "print('🚀 Hallo Roger! Deployment startet...')"
+        python -c "import os; print(f'DB_NAME check: {os.environ.get(\"DB_NAME\")==\"lc_db\"}')"
+        python -c "import os; print(f'DB_USER check: {os.environ.get(\"DB_USER\")==\"lc_db_admin\"}')"
+        python -c "import os; print(f'DB_HOST check: {os.environ.get(\"DB_HOST\")==\"lcsqlserver-live.database.windows.net\"}')"
+        python -c "import os; print(f'APP_NAME: {os.environ.get(\"APP_NAME\")}')"
+
+    - name: DNS Test
+      run: nslookup lcsqlserver-live.database.windows.net  # Alter Name war falsch!
 
     - name: Install ODBC Driver for SQL Server
       run: |
@@ -53,41 +50,58 @@ jobs:
         sudo apt-get update
         sudo ACCEPT_EULA=Y apt-get install -y msodbcsql18 unixodbc-dev
 
-    - name: Install pyodbc and dependencies for test
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyodbc
         pip install --no-cache-dir -r requirements.txt
 
     - name: Test pyODBC driver
       run: |
-        python -c "import pyodbc; print(pyodbc.drivers())"
-        
+        python -c "import pyodbc; print('✅ pyODBC Treiber:', pyodbc.drivers())"
+
+    # WICHTIG: Migrations & Collectstatic NUR ausführen, wenn die DB erreichbar ist
+    # Falls Sie lokale GitHub Firewall-Probleme haben, kommentieren Sie diese Steps aus
+    # und lassen Sie sie Server-side laufen (siehe unten)
     - name: Run Django migrations
       run: |
-        echo "CURRENT DIR:"
-        pwd
+        echo "📦 Django Migrationen starten..."
         python manage.py migrate
+      continue-on-error: true  # Falls DB von GitHub aus nicht erreichbar
 
     - name: Collect static files
       run: |
-        echo "CURRENT DIR:"
-        pwd
+        echo "📁 Collecting static files..."
         python manage.py collectstatic --noinput
 
     - name: Login to Azure
-      uses: azure/login@v1
+      uses: azure/login@v2  # v1 -> v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Zip application
+    - name: Zip application for deployment
       run: |
-        echo "CURRENT DIR:"
-        pwd
-        zip -r app.zip . -x "*.git*" "tests/*" "__pycache__/*"
+        echo "📦 Erstelle Deployment-Package..."
+        # Wir zippen alles außer .git, tests, Cache, etc.
+        zip -r app.zip . -x "*.git*" "tests/*" "*__pycache__*" "*.pyc" ".env"
 
     - name: Deploy to Azure Web App
       run: |
-        echo "CURRENT DIR:"
-        pwd
-        az webapp deploy --name ${{ env.APP_NAME }} --resource-group ${{ env.RESOURCE_GROUP }} --src-path app.zip --type zip
+        echo "🚀 Deploying zu: ${{ env.APP_NAME }}"
+        az webapp deploy \
+          --name ${{ env.APP_NAME }} \
+          --resource-group ${{ env.RESOURCE_GROUP }} \
+          --src-path app.zip \
+          --type zip \
+          --async false  # Wartet auf Completion, damit wir Status sehen
+
+    - name: Restart Web App (sicherheitshalber)
+      run: |
+        echo "🔄 Starte App neu..."
+        az webapp restart \
+          --name ${{ env.APP_NAME }} \
+          --resource-group ${{ env.RESOURCE_GROUP }}
+
+    - name: Deployment abgeschlossen
+      run: |
+        echo "✅ Deployment erfolgreich!"
+        echo "🌐 Ihre App läuft unter: https://${{ env.APP_NAME }}.azurewebsi
