--- a/.github/workflows/main_lc-app.yml
+++ b/.github/workflows/main_lc-app.yml
@@ -50,6 +50,7 @@ jobs:
         sudo apt-get update
         sudo ACCEPT_EULA=Y apt-get install -y msodbcsql18 unixodbc-dev
 
+
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
@@ -85,14 +86,14 @@ jobs:
         zip -r app.zip . -x "*.git*" "tests/*" "*__pycache__*" "*.pyc" ".env"
 
     - name: Deploy to Azure Web App
-      run: |
-        echo "🚀 Deploying zu: ${{ env.APP_NAME }}"
-        az webapp deploy \
-          --name ${{ env.APP_NAME }} \
-          --resource-group ${{ env.RESOURCE_GROUP }} \
-          --src-path app.zip \
-          --type zip \
-          --async false  # Wartet auf Completion, damit wir Status sehen
+      uses: azure/webapps-deploy@v3
+      id: deploy-to-webapp
+      with:
+        app-name: ${{ env.APP_NAME }}
+        package: app.zip
+        # WICHTIG: Das hier triggert den Oryx-Build auf dem Server korrekt
+        # publish-profile wird NICHT gebraucht, da wir 'azure/login' davor nutzen!
+
 
     - name: Restart Web App (sicherheitshalber)
       run: |
@@ -104,4 +105,4 @@ jobs:
     - name: Deployment abgeschlossen
       run: |
         echo "✅ Deployment erfolgreich!"
-        echo "🌐 Ihre App läuft unter: https://${{ env.APP_NAME }}.azurewebsi
+        echo "🌐 Ihre App läuft unter: https://${APP_NAME}.azurewebsites.net"
