--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,53 @@
-# Core Django
-Django>=4.2
-# SQL Server backend
-mssql-django==1.6
-pyodbc==5.0.1
-
-# Environment variable support
-python-dotenv==1.0.0
-
-# Optional: Azure deployment helpers
+asgiref==3.10.0
+async-timeout==5.0.1
+azure-core==1.38.1
+azure-identity==1.25.2
+azure-monitor-query==2.0.0
+beautifulsoup4==4.14.2
+bs4==0.0.2
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+cryptography==46.0.5
+Django==4.2.26
+django-mssql-backend==2.8.1
+django-recaptcha==4.1.0
+django-redis==5.4.0
+google-api-core==2.29.0
+google-auth==2.48.0
+googleapis-common-protos==1.72.0
 gunicorn==21.2.0
-
-# Optional: Static file handling for production
+idna==3.11
+isodate==0.7.2
+markdown-it-py==3.0.0
+mdurl==0.1.2
+msal==1.34.0
+msal-extensions==1.3.1
+mssql-django==1.6
+opencensus==0.11.4
+opencensus-context==0.1.3
+opencensus-ext-azure==1.1.15
+opencensus-ext-django==0.8.0
+packaging==25.0
+pip_search==0.0.14
+proto-plus==1.27.1
+protobuf==6.33.5
+psutil==7.2.2
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycparser==2.23
+Pygments==2.19.2
+PyJWT==2.11.0
+pyodbc==5.0.1
+python-dotenv==1.0.0
+pytz==2025.2
+redis==7.0.1
+requests==2.32.5
+rich==14.2.0
+rsa==4.9.1
+six==1.17.0
+soupsieve==2.8
+sqlparse==0.5.3
+typing_extensions==4.15.0
+urllib3==2.5.0
 whitenoise==6.6.0
-
-django-recaptcha>=3.0.0
